--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,6 @@
 <center>
     <h1>genter</h1>
-  </center>
+
   <label><h2>👇if your male click here</h2></label>
   <a href="index4.html">
     
@@ -11,4 +11,4 @@
   <h2>👇if your female clicke here</h2>
   <a href="index2.html"><button style="background-color: hotpink">
     female♀️
-  </button></a>
+  </button></a>  </center>
